# skeletal

./: .gitignore  Cargo.toml
examples/fbx/: main.rs
examples/gltf/: main.rs
examples/viewer/: main.rs
shaders/: Cargo.toml  build.rs  vertex.wgsl
shaders/src/: lib.rs
src/: anim.rs  data.rs  lib.rs  loader.rs  mesh.rs  model.rs  vault.rs
src/loader/: fbx.rs  gltf.rs  mod.rs
