[package]
name = "skeletal"
version = "0.1.0"
edition = "2024"

[dependencies]
mutual = "1.0.2"
skeletal_shaders = { path = "./shaders" }
anarchy = { path = "../anarchy" }
cell = { path = "../cell" }
gearbox = { path = "../gearbox" }
magician-vgpu = { path = "../shader_magician/magician-vgpu" }

chrono = "0.4.44"
futures = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
gltf = "1.4.1"
base64 = "0.22.1"
ahash = "0.8.12"
wgpu = "29.0"
anyhow = "1.0.103"
