[package]
name = "skeletal_shaders"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
magician-rust = { path = "../../shader_magician/magician-rust" }
magician-macros = { path = "../../shader_magician/magician-macros" }
magician-vgpu = { path = "../../shader_magician/magician-vgpu" }

bytemuck = "1.25.0"
wgpu = { version = "29.0" }

[build-dependencies]
magician-rust = { path = "../../shader_magician/magician-rust" }
